# todo_api_rs

./: .gitignore  Cargo.toml  Dockerfile  todos.json
src/: main.rs
src/database/: mod.rs
src/graphql/: mod.rs  schema.rs
src/graphql/model/: todo.rs
src/graphql/resolver/: mod.rs  todo_resolver.rs  user_resolver.rs
src/model/: todo.rs  user.rs
