[package]
name = "todo_api_rs"
version = "0.1.0"
authors = ["Nathakorn Throngtrairat <nathakorn.throngtrairat@agoda.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
async-graphql = "2.8.2"
async-graphql-actix-web = "2.8.2"
