[package]
name = "todo_api_rs"
version = "0.1.0"
authors = ["Nathakorn Throngtrairat <nathakorn.throngtrairat@agoda.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
async-graphql = { version = "2.8.2", features = ["chrono", "apollo_tracing"] }
async-graphql-actix-web = "2.8.2"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.125"
serde_json = "1.0.64"
